--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -33,7 +33,10 @@
 	      {Geographic resources analysis support system}
 	\novazkratka{ILSVRC}
 	      {ILSVRC}
-	      {ImageNet Large Scale Visual Recognition Challenge}
+	      {ImageNet large scale visual recognition challenge}
+	\novazkratka{IoU}
+	      {IoU}
+	      {Intersection over union}
 	\novazkratka{mAP}
 	      {mAP}
 	      {Mean average precision}
@@ -42,7 +45,7 @@
 	      {Region-based convolutional neural network}
 	\novazkratka{ReLU}
 	      {ReLU}
-	      {Rectified Linear Unit}
+	      {Rectified linear unit}
 	\novazkratka{ResNet}
 	      {ResNet}
 	      {Residual network}
@@ -57,7 +60,7 @@
 	      {Region proposal network}
 	\novazkratka{SVM}
 	      {SVM}
-	      {Support Vector Machine}
+	      {Support vector machine}
 	\novazkratka{VOC}
 	      {VOC}
 	      {Visual object classes}
