text maskrcnn library

--- a/text/3-image-ann.tex
+++ b/text/3-image-ann.tex
@@ -222,7 +222,7 @@ find more info about the Pascal \zk{VOC} datasets and challenges, please see
 The first issue, the separate forward propagations for all region proposals, was 
 solved by propagating the entire image to obtain a feature map before the region 
 proposition. For each object proposal is from the feature map extracted a 
-fixed-length feature vector by a region of interest \zk{RoI} pooling layer.
+fixed-length feature vector by a region of interest (\zk{RoI}) pooling layer.
 
 The \zk{RoI} pooling layer can be seen as an one-level spatial pyramid pooling 
 layer, a max pooling-based downsampling algorithm proposed in \cite{spp}. Its 
